[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.yapf]
based_on_style = "pep8"
indent_width = 4
column_limit = 100

[project]
name = "cutie"
version = "1.0.0"
authors = [{ name = "Rex Cheng", email = "hkchengrex@gmail.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  'numpy >= 1.21',
  'Pillow >= 9.5',
  'scipy >= 1.7',
  'einops >= 0.6',
  'hydra-core >= 1.3.2',
  'omegaconf >= 2.3',
  'pycocotools >= 2.0.7',
  'tqdm >= 4.66.1',
]
[tool.hatch.build.targets.wheel]
packages = ["cutie"]

[project.urls]
"Homepage" = "https://github.com/hkchengrex/Cutie"
"Bug Tracker" = "https://github.com/hkchengrex/Cutie/issues"
